# 8086-emulator

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  references.md
.github/workflows/: linux.yml
include/: bytes.h  instruction_templates.h  operation_type.h  peripheral.h  types.h
includes/: instruction_templates.h  logger.h  types.h
libraries/: CMakeLists.txt
src/: 8086.cpp  CMakeLists.txt  cpu.cpp  cpu.h
src/common/: CMakeLists.txt  address.cpp  address.h  bytes.h  decoder.h  instruction_templates.h  logger.h  micro_op.h  operation_type_selector.h
src/common/include/: address.h  bus.h  bytes.h  device.h  device_io.h  instruction.h  instruction_templates.h  io.h  types.h
src/common/include/constants/: opcodes.h
src/common/src/: address.cpp  bus.cpp  bytes.cpp  device_io.cpp  instruction.cpp  instruction_templates.cpp
src/cpu/: CMakeLists.txt  cpu.cpp  cpu.h
src/cpu/core/: CMakeLists.txt  segment.cpp
src/cpu/core/include/: decoder.h  device.h  flags.h  micro_op.h  op_type.h  op_type_selector.h  peripheral.h  port.h  registers.h
src/cpu/core/src/: flags.cpp  port.cpp  registers.cpp  segment.cpp
src/cpu/execution_unit/: CMakeLists.txt  execution_unit.cpp  execution_unit.h
src/cpu/execution_unit/instruction_set/: CMakeLists.txt  cmp.h  dec.h  incr.h  instruction_set.cpp  instruction_set.h  lds.h  lpa.cpp  lpa.h  mov.h  noop.cpp  out.h  pop.h  xchg.h
src/cpu/execution_unit/instruction_set/core/: CMakeLists.txt
src/cpu/execution_unit/instruction_set/core/include/: bus_io.h  decoders.h  jmp_operators.h  mov_operators.h  operators.h  physical_addresser.h  segment_mapper.h  stack_strategy.h
src/cpu/execution_unit/instruction_set/decoders/: CMakeLists.txt  decoders.h  value_io.cpp  value_io.h
src/cpu/execution_unit/instruction_set/include/: bus_io.h  io_selectors.h  jmp_operators.h  mov_operators.h  physical_addresser.h  segment_mapper.h
src/cpu/execution_unit/instruction_set/instructions/: CMakeLists.txt
src/cpu/execution_unit/instruction_set/instructions/include/: cli.h  cmc.h  conditional_jmp.h  cwd.h  daa.h  das.h  halt.h  int.h  iret.h  lock.h  pop.h  push.h  ret.h  std.h  sti.h  stos.h  sub.h  test.h
src/cpu/execution_unit/instruction_set/instructions/src/: cbw.cpp  clc.cpp  cwd.cpp  das.cpp  halt.cpp  incr.cpp  iret.cpp  lds.cpp  lea.cpp  movs.cpp  ret.cpp  sbb.cpp  scas.cpp  stc.cpp  stos.cpp
src/cpu/execution_unit/instruction_unit/: CMakeLists.txt  instruction_unit.cpp  instruction_unit.h
src/cpu/execution_unit/instruction_unit/core/: CMakeLists.txt
src/cpu/execution_unit/instruction_unit/core/include/: bus_io.h  decoders.h  io_selectors.h  math_operators.h  mov_operators.h  operators.h  physical_addresser.h  register_mapper.h  segment_mapper.h  sop.h  stack_strategy.h  value_io.h  xchg_operators.h
src/cpu/execution_unit/instruction_unit/core/src/: bus_io.cpp
src/cpu/execution_unit/instruction_unit/instructions/: CMakeLists.txt
src/cpu/execution_unit/instruction_unit/instructions/include/: aaa.h  aad.h  aam.h  aas.h  adc.h  add.h  cbw.h  clc.h  cld.h  cmps.h  conditional_jmp.h  dec.h  halt.h  int.h  iret.h  lds.h  lea.h  les.h  lods.h  lpa.h  movs.h  or.h  pop.h  push.h  retf.h  sbb.h  scas.h  shl.h  shr.h  stc.h  wait.h  xor.h
src/cpu/execution_unit/instruction_unit/instructions/src/: aaa.cpp  aad.cpp  aam.cpp  aas.cpp  cld.cpp  cmc.cpp  cmps.cpp  conditional_jmp.cpp  daa.cpp  int.cpp  iret.cpp  lahf.cpp  lods.cpp  retf.cpp  shr.cpp  sti.cpp
src/devices/: CMakeLists.txt  keyboard.h  pointer.h
src/devices/include/: display.h  keyboard.h  pointer.h  ram.h
src/execution_unit/: CMakeLists.txt  cpu.cpp  cpu.h  decoder_impl.cpp  decoder_impl.h  execution_unit.cpp  execution_unit.h
src/execution_unit/instruction_set/: CMakeLists.txt  cmp.cpp  cmp.h  conditional_jmp.h  dec.cpp  dec.h  in.cpp  in.h  incr.h  instruction_set.cpp  instruction_set.h  io_selectors.h  je.h  lahf.h  lds.h  lea.h  les.cpp  les.h  lpa.h  mov.h  mov_operators.h  noop.h  out.h  physical_addresser.h  pop.h  push.cpp  push.h  register_mapper.h  sahf.cpp  sahf.h  segment_mapper.h  segment_mapping_types.h  xchg.cpp  xchg.h  xlat.cpp  xlat.h
src/execution_unit/instruction_set/decoders/: CMakeLists.txt  decoders.cpp  decoders.h
src/execution_unit/instruction_set/include/: bus_io.h  io_selectors.h  jmp_operators.h  math_operators.h  mov_operators.h  operators.h  physical_addresser.h  register_mapper.h  segment_mapper.h  segment_mapping_types.h  sop.h  stack_strategy.h  xchg_operators.h
src/peripheral/: CMakeLists.txt  ram.cpp  ram.h
tests/: CMakeLists.txt  tests.cpp  types_tests.h
tests/execution_unit_tests/: execution_unit_tests.h  execution_unit_tests_1.h
tests/execution_unit_tests/asm/: boot.asm  mov2.asm  mov2.lst  mov3.asm  mov3.lst  mov4.asm  mov4.lst
tests/instruction_set_tests/: bus_address_latch_tests.h  cmp_tests.h  in_tests.h  incr_tests.h  instruction_executor_tests.h  instruction_set_tests.h  int_tests.h  io_selectors_tests.h  iret_tests.h  lahf_tests.h  lds_tests.h  lea_tests.h  les_tests.h  mov_tests.h  out_tests.h  pop_tests.h  push_tests.h  sahf_tests.h  segment_mapper_tests.h  xchg_tests.h  xlat_tests.h
tests/instruction_set_tests/asm/: mov1.asm  mov1.lst
tests/instruction_unit_tests/: bus_address_latch_tests.h  cmp_tests.h  in_tests.h  incr_tests.h  instruction_unit_tests.h  int_tests.h  io_selectors_tests.h  iret_tests.h  lahf_tests.h  lds_tests.h  lea_tests.h  les_tests.h  mov_tests.h  out_tests.h  pop_tests.h  push_tests.h  sahf_tests.h  segment_mapper_tests.h  xlat_tests.h
tests/peripheral_tests/: keyboard_tests.h  ram_tests.h
