add_library(
  instructions
  STATIC
  src/mov.cpp
  src/push.cpp
  src/pop.cpp
  src/xchg.cpp
  src/in.cpp
  src/out.cpp
  src/xlat.cpp
  src/lea.cpp
  src/lpa.cpp
  src/les.cpp
  src/lds.cpp
  src/incr.cpp
  src/cmp.cpp
  src/lahf.cpp
  src/sahf.cpp
  src/conditional_jmp.cpp
  src/dec.cpp
  src/noop.cpp

  src/aad.cpp
  src/or.cpp
  src/adc.cpp
  src/sbb.cpp
  src/add.cpp
  src/daa.cpp
  src/sub.cpp
  src/das.cpp
  src/xor.cpp
  src/aaa.cpp
  src/aas.cpp
  src/test.cpp
  src/cbw.cpp
  src/cwd.cpp
  src/wait.cpp
  src/movs.cpp
  src/cmps.cpp
  src/stos.cpp
  src/lods.cpp
  src/scas.cpp
  src/ret.cpp
  src/retf.cpp
  src/int.cpp
  src/iret.cpp
  src/aam.cpp
  src/aad.cpp
  src/lock.cpp
  src/halt.cpp
  src/cmc.cpp
  src/clc.cpp
  src/stc.cpp
  src/cli.cpp
  src/sti.cpp
  src/cld.cpp
  src/std.cpp
  )

target_include_directories(instructions PUBLIC ../core/include include)

